--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<div class="new-bar">
 					<h3 class="new-h3">湾岸 Midnight 4.0 开发进度</h3>
 					<div class="form-progress">
-						<progress class="form-progress-bar" min="0" max="100" value="54" step="55" aria-labelledby="form-progress-completion"></progress>
+						<progress class="form-progress-bar" min="0" max="100" value="69" step="50" aria-labelledby="form-progress-completion"></progress>
 						<div class="new-flex">
 						<div class="form-progress-indicator one active">
 							<h4 class="bar-h4">立项</h4>
@@ -183,7 +183,7 @@
 						<div class="form-progress-indicator three active">
 							<h4 class="bar-h4">设计完成</h4>
 						</div>
-						<div class="form-progress-indicator four">
+						<div class="form-progress-indicator four active">
 							<h4 class="bar-h4">开发完成</h4>
 						</div>
 						<div class="form-progress-indicator five">
@@ -200,8 +200,8 @@
 						<div class="learn-more-text">
 							<a href="./page/more2.html">
 							<p class="learn-more-p">
-<!-- 								进一步了解&nbsp;&nbsp;>
- -->							</p>
+								进一步了解&nbsp;&nbsp;>
+ 							</p>
 							</a>
 						</div>
 					</div>
@@ -462,7 +462,7 @@
 								
 							</div>
 							<div class="about-home" style="margin-top: -10px;">
-									<a class="link" href="./page/update/HT2022211.html">3.3.7(14G14FZ)</a>
+									<a class="link" href="./page/update/HT2022211.html">3.4(14G15A)</a>
 									<a class="link" href="http://midnightnth.club:59144">Admin Login</a>
 							</div>
 							<div class="about-home" align="right">
