--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
 		
 		
 		<div class="info-div">
-			<div class="new">
+			<!-- <div class="new">
 				<div class="new-bar">
 					<h3 class="new-h3">湾岸 Midnight 4.0 开发进度</h3>
 					<div class="form-progress">
-						<progress class="form-progress-bar" min="0" max="100" value="69" step="50" aria-labelledby="form-progress-completion"></progress>
+						<progress class="form-progress-bar" min="0" max="100" value="94" step="50" aria-labelledby="form-progress-completion"></progress>
 						<div class="new-flex">
 						<div class="form-progress-indicator one active">
 							<h4 class="bar-h4">立项</h4>
@@ -186,7 +186,7 @@
 						<div class="form-progress-indicator four active">
 							<h4 class="bar-h4">开发完成</h4>
 						</div>
-						<div class="form-progress-indicator five">
+						<div class="form-progress-indicator five active">
 							<h4 class="bar-h4">测试完成</h4>
 						</div>
 						<div class="form-progress-indicator six">
@@ -199,6 +199,7 @@
 					<div class="learn-more">
 						<div class="learn-more-text">
 							<a href="./page/more2.html">
+								将于2023年1月1日发布
 							<p class="learn-more-p">
 								进一步了解&nbsp;&nbsp;>
  							</p>
@@ -207,7 +208,7 @@
 					</div>
 					
 				</div>
-			</div>
+			</div> -->
 			
 			
 			<h3 class="info-h3">快速访问</h3>
@@ -462,7 +463,7 @@
 								
 							</div>
 							<div class="about-home" style="margin-top: -10px;">
-									<a class="link" href="./page/update/HT2022211.html">3.4(14G15A)</a>
+									<a class="link" href="./page/update/HT2022211.html">3.4.3(14G15C)</a>
 									<a class="link" href="http://midnightnth.club:59144">Admin Login</a>
 							</div>
 							<div class="about-home" align="right">
